[package]
name = "Dorion"
version = "6.10.0"
description = "Tiny alternative Discord client with a smaller footprint, themes and plugins, multi-profile, and more!"
authors = ["SpikeHD"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.88"

[profile.release]
strip = "debuginfo"
lto = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6.0"
include-flate = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.3", features = ["macos-private-api", "macos-proxy", "devtools", "tray-icon", "image-png"] }
tauri-plugin-deep-link = "2.4"
tauri-plugin-shell = { git = "https://github.com/SpikeHD/plugins-workspace.git", branch = "v2"}
tauri-plugin-single-instance = { version = "2.3.0", features = ["deep-link"] }
tauri-plugin-process = "=2.3.0"
tauri-plugin-autostart = "2.5"
tauri-plugin-http = "2.5"
tauri-plugin-prevent-default = "2.1.2"
window-vibrancy = { version = "0.6.0", optional = true }
reqwest = { version = "0.12", features = ["blocking"] }
phf = { version = "0.13", features = ["macros"] }
sysinfo = "0.37"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
device_query = { version = "4.0", optional = true }
regex = "1.11"
rsrpc = { git = "https://www.github.com/SpikeHD/rsRPC", tag = "v0.25.0", optional = true }
window_titles = { git = "https://github.com/SpikeHD/window_titles", branch = "master" }
mundy = { version = "0.2", features = ["accent-color", "callback"] }
notify-rust = "4.11"
gumdrop = "0.8.1"
open = "5.3.2"

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_4"] }
wgpu = { version = "26.0", default-features = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = [
  "NSDate",
  "NSUserDefaults",
  "NSAutoreleasePool",
  "NSThread",
] }
objc2-app-kit = { version = "0.2.2", features = [
  "NSApplication",
  "NSColor",
  "NSResponder",
  "NSView",
  "NSWindow",
  "NSDockTile",
] }
objc2-web-kit = { version = "0.2.2", features = [
  "objc2-app-kit",
  "WKWebView",
  "WKUserContentController",
  "WKWebViewConfiguration",
  "WKWebsiteDataStore",
  "block2",
] }
block2 = "0.5.1"
embed_plist = "1.2.2"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-window-state = "2.0"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"
webview2-com = "0.38.0"
win7-notifications = "0.4.5"
windows-implement = "0.60.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Graphics",
    "Win32_Graphics_Dwm",
    "Win32_System_SystemInformation",
    "Wdk_System_SystemServices"
]

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[features]
# I would love to be able to specify default features by OS someday, because macOS
# does not support rpc and hotkeys lol
default = ["rpc", "blur", "hotkeys"]
hotkeys = ["device_query"]
rpc = ["rsrpc"]
blur = ["window-vibrancy"]

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]

# Also use lld on macos
[target.'cfg(target_os = "macos")']
rustflags = [
    "-C", "link-arg=-fuse-ld=lld",
]
