[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "default-tls"] }
pico-args = "0.5.0"

#[cfg(not(target_os = "windows"))]
sudo = "0.6.0"

#[cfg(target_os = "windows")]
is_elevated = "0.1.2"

